--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="خمّنها, 5menha, ألعاب, ألغاز, تحدي الأصدقاء">
     <meta property="og:image" content="5menha.png">
     
-    <title>خمّنها - لعبة التحدي الذكي</title>
+    <title>Download 5menha</title>
     
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" 
