--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" 
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js">
             integrity="sha384-9/Lh7mXSwB1d7a1z7Kq6nU2z3G+qTz4yMLqJ3wZJZnY5vEG7J2K4PY5fC7Y4fD4O" 
             crossorigin="anonymous"></script>
     <script src="app.js"></script>
