--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
                 تحميل اللعبة
                 <i class="fas fa-download"></i>
             </a>
+            <div class="contact-section">
+    <h2>تواصل معنا</h2>
+    <div class="contact-links">
+        <a href="https://www.instagram.com/5menha?igsh=bHF4NGV6ZjVyaDYw" target="_blank" class="contact-item">
+            <i class="fab fa-instagram"></i>
+            <span>5menha</span>
+        </a>
+        <a href="mailto:5menhateam@gmail.com" class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <span>5menha team</span>
+        </a>
+    </div>
+            </div>
         </div>
 
         <div class="info-section">
