--- a/index.html
+++ b/index.html
@@ -34,14 +34,20 @@
             <img src="5menha.png" alt="خـمِّـنها" style="width: 200px; height: auto;"class="logo"
             loading="lazy"
             decoding="async">
-            <p style="font-size: 1.2rem; margin-bottom: 1.5rem;">استمتع بلعبة تخمين مسلية مع أصدقائك!</p>
-            <a href="#" class="download-btn" 
-               role="button" 
-               aria-label="تحميل اللعبة"
-               onclick="showDownloadModal()">
-                تحميل اللعبة
-                <i class="fas fa-download"></i>
-            </a>
+            <div style="text-align: center;">
+                <p style="font-size: 1.2rem; margin-bottom: 1.5rem;">استمتع بلعبة تخمين مسلية مع أصدقائك!</p>
+                <a href="#" class="download-btn" 
+                   role="button" 
+                   aria-label="تحميل اللعبة"
+                   onclick="showDownloadModal()">
+                    تحميل اللعبة
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+            <!-- Last update display -->
+            <p id="lastUpdate" style="text-align: center; font-size: 1rem; margin-top: 1rem; opacity: 0.8;">
+                آخر تحديث: <span id="updateDate">31/3/2025</span>
+            </p>
             <div class="contact-section">
                 <h2>تواصل معنا</h2>
                 <div class="contact-links">
